little fix with z-index and context menu

--- a/src/style.styl
+++ b/src/style.styl
@@ -63,7 +63,7 @@ button
   left: 0
   right: 0
   bottom: 0
-  z-index: 10
+  z-index: 1
 
 
 #workspace
